Frankbelford/uatv1ba/force-app/main/default/objects/IP_TopazGlobalClientInformation__c/IP_TopazGlobalClientInformation__c.object-meta.xml
<CustomObject>
    <label>Topaz Global Client Information</label>
    <nameField>
        <label>Topaz Global Client Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Topaz Global Client Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>