Frankbelford/uatv1ba/force-app/main/default/objects/IP_TopazGlobalClientInformation__c/fields/EDI_Client__c.field-meta.xml
<CustomField>
    <fullName>EDI_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require EDI Mapping</label>
    <type>Checkbox</type>
</CustomField>