Frankbelford/uatv1ba/force-app/main/default/objects/IP_TopazGlobalClientInformation__c/fields/IP_AccountBalance__c.field-meta.xml
<CustomField>
    <fullName>IP_AccountBalance__c</fullName>
    <label>Account Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>