Frankbelford/uatv1ba/force-app/main/default/objects/IP_TopazGlobalClientInformation__c/fields/IP_AddressLine1__c.field-meta.xml
<CustomField>
    <fullName>IP_AddressLine1__c</fullName>
    <label>Address Line 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>