Frankbelford/uatv1ba/force-app/main/default/objects/IP_TopazGlobalClientInformation__c/fields/IP_AddressLine2__c.field-meta.xml
<CustomField>
    <fullName>IP_AddressLine2__c</fullName>
    <label>Address Line 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>