Frankbelford/uatv1ba/force-app/main/default/objects/IP_TopazGlobalClientInformation__c/fields/IP_County__c.field-meta.xml
<CustomField>
    <fullName>IP_County__c</fullName>
    <label>County</label>
    <length>50</length>
    <type>Text</type>
</CustomField>