Frankbelford/uatv1ba/force-app/main/default/objects/IP_TopazGlobalClientInformation__c/fields/IP_CreditLimit__c.field-meta.xml
<CustomField>
    <fullName>IP_CreditLimit__c</fullName>
    <label>Credit Limit</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>