Frankbelford/uatv1ba/force-app/main/default/objects/IP_TopazGlobalClientInformation__c/fields/IP_DivisionCode__c.field-meta.xml
<CustomField>
    <fullName>IP_DivisionCode__c</fullName>
    <label>Division Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>