Frankbelford/uatv1ba/force-app/main/default/objects/IP_TopazGlobalClientInformation__c/fields/IP_NetMonthlySettlementCode__c.field-meta.xml
<CustomField>
    <fullName>IP_NetMonthlySettlementCode__c</fullName>
    <label>Net Monthly (settlement code)</label>
    <length>6</length>
    <type>Text</type>
</CustomField>