Frankbelford/uatv1ba/force-app/main/default/objects/IP_TopazGlobalClientInformation__c/fields/IP_PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>IP_PaymentTerms__c</fullName>
    <label>Payment Terms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>