Frankbelford/uatv1ba/force-app/main/default/objects/IP_TopazGlobalClientInformation__c/fields/IP_Postcode__c.field-meta.xml
<CustomField>
    <fullName>IP_Postcode__c</fullName>
    <label>Postcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>