Frankbelford/uatv1ba/force-app/main/default/objects/IP_TopazGlobalClientInformation__c/fields/IP_SalesLedgerNumber__c.field-meta.xml
<CustomField>
    <fullName>IP_SalesLedgerNumber__c</fullName>
    <label>Sales Ledger Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>