Frankbelford/uatv1ba/force-app/main/default/objects/IP_TopazGlobalClientInformation__c/fields/IP_StatusID__c.field-meta.xml
<CustomField>
    <fullName>IP_StatusID__c</fullName>
    <label>Status ID</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>