Frankbelford/uatv1ba/force-app/main/default/objects/IP_TopazGlobalClientInformation__c/fields/IP_TopazUniquenumber__c.field-meta.xml
<CustomField>
    <fullName>IP_TopazUniquenumber__c</fullName>
    <label>Topaz Unique number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>