Frankbelford/uatv1ba/force-app/main/default/objects/IP_TopazGlobalClientInformation__c/fields/IP_Town__c.field-meta.xml
<CustomField>
    <fullName>IP_Town__c</fullName>
    <label>Town</label>
    <length>50</length>
    <type>Text</type>
</CustomField>