Frankbelford/uatv1ba/force-app/main/default/objects/IP_TopazGlobalClientInformation__c/fields/Next_Wednesday__c.field-meta.xml
<CustomField>
    <fullName>Next_Wednesday__c</fullName>
    <formula>CASE(MOD(Stamp_date_on_hold__c-DATE(2000, 1, 1), 7), 
0, Stamp_date_on_hold__c+11, 
1, Stamp_date_on_hold__c+10, 
2, (Stamp_date_on_hold__c)+9, 
3, (Stamp_date_on_hold__c)+8, 
4, (Stamp_date_on_hold__c)+7, 
5, (Stamp_date_on_hold__c)+6, 
6, (Stamp_date_on_hold__c)+5,
Stamp_date_on_hold__c)</formula>
    <label>Next Wednesday</label>
    <type>Date</type>
</CustomField>