Frankbelford/uatv1ba/force-app/main/default/objects/IP_TopazGlobalClientInformation__c/fields/Stamp_date_on_hold__c.field-meta.xml
<CustomField>
    <fullName>Stamp_date_on_hold__c</fullName>
    <label>Stamp date on hold</label>
    <type>Date</type>
</CustomField>