Frankbelford/uatv1ba/force-app/main/default/objects/IP_TopazGlobalClientInformation__c/fields/Text_EDI__c.field-meta.xml
<CustomField>
    <fullName>Text_EDI__c</fullName>
    <label>EDI Rate Code Mapping</label>
    <length>100</length>
    <type>Text</type>
</CustomField>