Frankbelford/uatv1ba/force-app/main/default/objects/IP_TopazGlobalClientInformation__c/listViews/EDI_Mapping.listView-meta.xml
<ListView>
    <fullName>EDI_Mapping</fullName>
    <columns>NAME</columns>
    <columns>IP_CompanyRegNo__c</columns>
    <columns>EDI_Client__c</columns>
    <columns>Text_EDI__c</columns>
    <columns>IP_SalesLedgerNumber__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EDI_Client__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>IP_DivisionCode__c</field>
        <operation>notEqual</operation>
        <value>TATE</value>
    </filters>
    <label>EDI Mapping</label>
    <language>en_US</language>
</ListView>