Frankbelford/uatv1ba/force-app/main/default/objects/IP_TopazGlobalClientInformation__c/listViews/Non_DNU_Clients.listView-meta.xml
<ListView>
    <fullName>Non_DNU_Clients</fullName>
    <columns>NAME</columns>
    <columns>IP_CompanyRegNo__c</columns>
    <columns>IP_SalesLedgerNumber__c</columns>
    <columns>EDI_Client__c</columns>
    <columns>Text_EDI__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>DNU</value>
    </filters>
    <label>Non-DNU Clients</label>
    <language>en_US</language>
</ListView>